2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_position): cast menu's
	toplevel to GtkWindow when passing to gtk_window_set_type_hint().

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktestutils.c: #undef GTK_DISABLE_DEPRECATED, clean up
	includes a bit.

	* gtk/gtkuimanager.c: #include "gtkwindow.h", it was only pulled
	in via deprecated headers.

2008-06-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 508751 – gnome-terminal crashed with SIGSEGV after keypress

	* gdk/x11/gdkkeys-x11.c (_gdk_keymap_key_is_modifier): Protect
	against XKB being stupid. Reported by Pedro Villavicencio.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkplug.c (_gtk_plug_send_delete_event): use g_object_ref()
	and unref() instead of the deprecated gtk_widget_ref() and unref().

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkentry.c: removed function drag_begin_cb(), which was in
	svn since 2.8 but was never used.

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkbindings.c (_gtk_binding_entry_add_signall): use
	gtk_binding_entry_clear() instead of gtk_binding_entry_add()
	(the former is deprecated and #defined to gtk_binding_entry_clear)

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprintoperation-unix.c: don't include the deprecated (and
	unused) "gtkmarshal.h".

2008-06-16  Behdad Esfahbod  <behdad@gnome.org>

	Bug 538182 – pango_cairo_context_update_layout is not noop after
	gtk_widget_create_pango_layout

	* gtk/gtksettings.c (settings_update_font_options): Make sure all
	font option fields are set to non-DEFAULT values.

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfontsel.c
	* gtk/gtkrc.c
	* gtk/gtkstyle.c
	* gtk/gtkwidget.c: use g_object_unref() instead of the deprecated
	gtk_rc_style_unref().

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_class_init): use
	_gtk_marshal_BOOLEAN__VOID instead of the deprecated